# OaknutsSubmission

./: README.md
BackEnd/: .gitignore
BackEnd/oaknuts-backend-listener/: Dockerfile  Makefile  README.md  package-lock.json  package.json
BackEnd/oaknuts-backend-listener/src/: constants.js  index.js  listener.js  logger.js  models.js  oaknuts.js  solanalistener.js
FrontEnd/: .prettierignore  README.md  package-lock.json  package.json
FrontEnd/public/: index.html
FrontEnd/src/: index.css  index.tsx  jsdeclare.d.ts
FrontEnd/src/components/: App.tsx
FrontEnd/src/components/css/: DashboardPage.module.css  DepositPage.module.css  ProgressPage.module.css  SignInPage.module.css  YellowButton.module.css
FrontEnd/src/components/managed/: ConnectButtonView.tsx  DashboardButtonView.tsx  DepositButtonView.tsx  DepositEthAddressTileView.tsx  ProgressPageView.tsx
FrontEnd/src/components/ui/: YellowButtonUI.tsx
FrontEnd/src/components/ui/DashboardPage/: DashboardLedgerTile.tsx  DashboardLogoTileUI.tsx  DashboardPageUI.tsx  DashboardUserInfoComponent.tsx
FrontEnd/src/components/ui/DepositPage/: DepositDepositTile.tsx  DepositEthAddressTileUI.tsx  DepositPageUI.tsx  (+2 more)
FrontEnd/src/redux/: reducer.ts  store.ts
FrontEnd/src/redux/action/: ActionCreator.ts  ActionType.ts
FrontEnd/src/services/: BackendServices.ts  OaknutsSmartContract.ts  SolanaWalletServices.ts
SmartContract/: .gitignore  Cargo.toml  OakNuts-Accounts.md  README.md
SmartContract/.github/workflows/: main.yml
SmartContract/src/: account_instruction.rs  lib.rs  swap_instruction.rs
(+3 files in other folders)
